# CleanCode-CleanArchitecture-DomainDrivenDesign-Python

./: Makefile  create.sql  pyproject.toml
.github/workflows/: continuous_integration.yml  lint.yml
backend/auth/: create.sql  docker-compose.yml  pyproject.toml
backend/auth/src/: main_api.py
backend/auth/test/integration/: test_api.py  test_signup.py  test_token_generator.py
backend/auth/test/unit/: test_email.py  test_password.py  test_user.py
backend/catalog/: Makefile  pyproject.toml
backend/catalog/src/: main_api.py
backend/catalog/src/application/repository/: product_repository.py
backend/catalog/src/application/usecase/: get_product.py  get_products.py
backend/catalog/src/domain/entity/: product.py
backend/catalog/src/infra/database/: asyncpg_adapter.py  connection.py
backend/catalog/src/infra/http/: fast_api_adapter.py  http_controller.py  httpx_adapter.py  request_adapter.py
backend/catalog/src/infra/repository/: product_repository_database.py
backend/catalog/test/integration/: test_api.py  test_get_product.py  test_get_products.py
backend/catalog/test/unit/: test_product.py
backend/checkout/: Makefile  create.sql  docker-compose.yml  pyproject.toml
backend/checkout/.github/workflows/: continuous_integration.yml
backend/checkout/src/: main_api.py  main_cli.py
backend/checkout/test/integration/: test_api.py  test_checkout.py  test_cli.py  test_simulate_freight.py  test_validate_coupon.py
backend/checkout/test/unit/: test_coupon.py  test_cpf.py  test_freight_calculator.py  test_order.py  test_product.py
backend/currency/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/currency/src/: main_api.py
backend/freight/: Makefile  pyproject.toml
backend/freight/src/: main_api.py
backend/freight/test/integration/: test_api.py  test_calculate_freight.py
backend/freight/test/unit/: test_distance_calculator.py  test_freight_calculator.py
backend/stock/: pyproject.toml
backend/stock/src/: main_api.py
backend/stock/test/integration/: test_api.py  test_decrement_stock.py
backend/stock/test/unit/: test_stock_calculator.py  test_stock_entry.py
src/: api.py  api_currency.py  checkout.py  cli.py  coupon_repository.py  coupon_repository_database.py  cpf.py  currency_gateway.py  currency_gateway_http.py  freight_calculator.py  get_order.py  main.py  order_repository.py  order_repository_database.py  product_repository.py  product_repository_database.py  simulate_freight.py  validate_coupon.py
src/application/usecase/: checkout.py  get_order.py  simulate_freight.py
src/domain/entity/: coupon.py  cpf.py  currency_table.py  freight_calculator.py  item.py  order.py  product.py
test/: test_api.py  test_checkout.py  test_coupon.py  test_cpf.py  test_freight.py  test_freight_calculator.py  test_order.py  test_product.py  test_simulate_freight.py  test_validate_coupon.py
test/unit/: test_main.py
(+81 files in other folders)
