[tool.poetry]
name = "currency"
version = "0.1.0"
description = ""
authors = ["Ivar Carrera <ivar.carrera@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
